<?xml version="1.0"?>
<package format="2">
  <name>tuw_iwos_command_converter</name>
  <version>0.0.0</version>
  <description>Converter for messages to IWOS messages</description>

  <maintainer email="eugen.kaltenegger@gmail.com">Eugen Kaltenegger</maintainer>

  <license>BSD</license>

  <author email="eugen.kaltenegger@gmail.com">Eugen Kaltenegger</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rospy</build_depend>

  <exec_depend>rospy</exec_depend>

  <export>
    <!--nothing to export -->
  </export>

</package>
