<?xml version="1.0"?>
<package format="2">
  <name>tuw_iwos_motion_controller</name>
  <version>0.0.0</version>
  <description>Package for motion controll for the IWOS robot</description>

  <maintainer email="eugen.kaltenegger@gmail.com">Eugen Kaltenegger</maintainer>

  <license>BSD</license>

  <author email="eugen.kaltenegger@gmail.com">Eugen Kaltenegger</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>tuw_nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>roslint</exec_depend>
  <exec_depend>tuw_nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <!-- nothing to export -->
  </export>

</package>
