<?xml version="1.0"?>
<package format="2">
  <name>tuw_iwos_odometer</name>
  <version>0.0.0</version>
  <description>Package to manage odometer information for the IWOS robot</description>

  <maintainer email="eugen.kaltenegger@gmail.com">Eugen Kaltenegger</maintainer>

  <license>BSD</license>

  <author email="eugen.kaltenegger@gmail.com">Eugen Kaltenegger</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tuw_geometry</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>roslint</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tuw_geometry</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>roslint</build_export_depend>

  <test_depend>rosunit</test_depend>
  <test_depend>code_coverage</test_depend>

  <export>
    <!-- nothing to export -->
  </export>

</package>
