<?xml version="1.0"?>
<package format="2">

  <name>tuw_iwos_revolute_and_steering_plugin</name>
  <version>0.0.0</version>
  <description>RQT plugin to control independent wheel offset steering</description>

  <maintainer email="eugen.kaltenegger@gmail.com">Eugen Kaltenegger</maintainer>

  <license>BSD</license>

  <author email="eugen.kaltenegger@gmail.com">Eugen Kaltenegger</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roslint</build_depend>

  <exec_depend>rostopic</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>python_qt_binding</exec_depend>
  <exec_depend>tuw_nav_msgs</exec_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>

</package>
