<?xml version="1.0"?>
<package format="2">
  <name>tuw_iwos_ros_control</name>
  <version>0.0.0</version>
  <description>Package combining hardware interfaces for IWOS</description>

  <maintainer email="eugen.kaltenegger@gmail.com">Eugen Kaltenegger</maintainer>

  <license>BSD</license>

  <author email="eugen.kaltenegger@gmail.com">Eugen Kaltenegger</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
    <!-- nothing to export -->
  </export>

</package>
