<?xml version="1.0"?>
<package format="2">
  <name>tuw_iwos_rqt_control</name>
  <version>0.0.0</version>
  <description>RQT plugin to control independent wheel offset steering</description>

  <maintainer email="eugen.kaltenegger@gmail.com">Eugen Kaltenegger</maintainer>

  <license>BSD</license>

  <author email="eugen.kaltenegger@gmail.com">Eugen Kaltenegger</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roslint</build_depend>

  <export>
    <!--nothing to export -->
  </export>

</package>
